# youtube-slides-mvp

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
benchmarks/slide-20260409-022438/: expected_pages.json
docs/: HANDOFF.md  REMEDIATION_PLAN.md  RUNBOOK.md
files/: rca-progressive-reveal.md
scripts/: audit_run.py  check_991_neighbors.py  check_blank.py  check_frame_distance.py  compare_gaps.py  create_benchmark.py  diag_deep.py  diag_full_dedupe.py  diag_issues.py  diag_pairs.py  diag_remaining_dupes.py  diag_stage_e_trace.py  diff_baseline.py  diff_baseline1.py  eval_run.py  install_deps_mac.sh  rerun_d3_d10.py  spatial_analysis.py  trace_completion.py  trace_double_fsm.py  trace_fsm_chain.py  trace_gap.py  trace_manual_phases.py  trace_phase12.py  trace_stages.py  train_classifier.py
src/: __init__.py
src/youtube_slides_mvp/: benchmark.py  cli.py  dedupe.py  extract.py  frame_cache.py  health.py  manifest.py  models.py  ocr_refill.py  pdfManipulation.md  pdfpages.py  pdfpages_cli.py  preprocess.py  quality.py  refill.py  render.py  scene.py  text_compare.py
tests/: test_benchmark.py  test_cli_refill.py  test_dedupe.py  test_extract.py  test_frame_cache.py  test_manifest.py  test_ocr_refill.py  test_pdfpages.py  test_pdfpages_property.py  test_preprocess.py  test_quality.py  test_refill.py  test_scene.py  test_text_compare.py
